--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "react": "^19.2.3",
     "@google/genai": "^1.36.0",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "jszip": "3.10.1",
-    "file-saver": "2.0.5"
+    "lucide-react": "^0.562.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
